--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,9 @@
 
 @layer base {
   :root {
+    --page-primary : 229 44% 5%;
+    --page-secondary : 229 44% 5%;
+
     --background: 222 47% 5%;
     --foreground: 210 40% 95%;
 
@@ -66,6 +69,9 @@
   }
 
   .light {
+    --page-primary : 210 40% 98%;
+    --page-secondary : 210 40% 98%;
+
     --background: 210 40% 98%;
     --foreground: 222 47% 11%;
 
